# plox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
plox/: __main__.py  callables.py  classes.py  cli.py  environment.py  errors.py  expressions.py  function.py  interpreter.py  io.py  parser.py  resolver.py  scanner.py  statements.py  tokens.py
scripts/: ast-data.json  expr-data.json  generate-ast.py  stmt-data.json
tests/: test_environments.py  test_examples.py  test_expression_interpreting.py  test_expression_parsing.py  test_interpreter.py  test_parser.py  test_peekable_text_io.py  test_scanner.py  test_statement_interpreting.py  test_statement_parsing.py  utilities.py
tests/examples/: block-scoping.lox  block-scoping.tokens  fibonacci-script.lox  fibonacci-script.tokens
