[tool.poetry]
name = "plox"
version = "0.1.0"
description = "Another python translation of Crafting Interpreter's jlox"
authors = ["Caleb Ball <caleb.ball@explain.com.au>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
hypothesis = "^6.14.6"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
pylint = "^2.11.1"
black = "^21.9b0"
mypy = "^0.910"

[tool.poetry.scripts]
plox = "plox.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
